--- a/index.html
+++ b/index.html
@@ -10,40 +10,125 @@
       </header>
 
       <section>
-        <h3>Real Speech Samples</h3>
+        <h3>Speech Samples</h3>
         <ul>
           <li>
-            <p>Sample 1:</p>
+            <p><b>MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152</b></p>
+            <p>Original</p>
             <audio controls>
-              <source src="audio/real1.wav" type="audio/wav">
-              Your browser does not support the audio element.
+              <source src="MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152.wav" type="audio/wav">
+            </audio>
+            <p>AudioSeal WM</p>
+            <audio controls>
+              <source src="MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_audioseal_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-A WM</p>
+            <audio controls>
+              <source src="MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_fakemark_a_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-T WM</p>
+            <audio controls>
+              <source src="MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_fakemark_t_wm.wav" type="audio/wav">
+            </audio>
+            <p>Timbre WM</p>
+            <audio controls>
+              <source src="MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_timbre_wm.wav" type="audio/wav">
             </audio>
           </li>
-          <li>
-            <p>Sample 2:</p>
-            <audio controls>
-              <source src="audio/real2.wav" type="audio/wav">
-              Your browser does not support the audio element.
-            </audio>
-          </li>
-        </ul>
-      </section>
 
-      <section>
-        <h3>Fake Speech Samples</h3>
-        <ul>
           <li>
-            <p>Sample 1:</p>
+            <p><b>MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024</b></p>
+            <p>Original</p>
             <audio controls>
-              <source src="audio/fake1.wav" type="audio/wav">
-              Your browser does not support the audio element.
+              <source src="MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024.wav" type="audio/wav">
+            </audio>
+            <p>AudioSeal WM</p>
+            <audio controls>
+              <source src="MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_audioseal_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-A WM</p>
+            <audio controls>
+              <source src="MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_fakemark_a_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-T WM</p>
+            <audio controls>
+              <source src="MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_fakemark_t_wm.wav" type="audio/wav">
+            </audio>
+            <p>Timbre WM</p>
+            <audio controls>
+              <source src="MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_timbre_wm.wav" type="audio/wav">
             </audio>
           </li>
+
           <li>
-            <p>Sample 2:</p>
+            <p><b>MLAAD-en-Mars5-wives_and_daughters_25_f000065</b></p>
+            <p>Original</p>
             <audio controls>
-              <source src="audio/fake2.wav" type="audio/wav">
-              Your browser does not support the audio element.
+              <source src="MLAAD-en-Mars5-wives_and_daughters_25_f000065.wav" type="audio/wav">
+            </audio>
+            <p>AudioSeal WM</p>
+            <audio controls>
+              <source src="MLAAD-en-Mars5-wives_and_daughters_25_f000065_audioseal_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-A WM</p>
+            <audio controls>
+              <source src="MLAAD-en-Mars5-wives_and_daughters_25_f000065_fakemark_a_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-T WM</p>
+            <audio controls>
+              <source src="MLAAD-en-Mars5-wives_and_daughters_25_f000065_fakemark_t_wm.wav" type="audio/wav">
+            </audio>
+            <p>Timbre WM</p>
+            <audio controls>
+              <source src="MLAAD-en-Mars5-wives_and_daughters_25_f000065_timbre_wm.wav" type="audio/wav">
+            </audio>
+          </li>
+
+          <li>
+            <p><b>MLAAD-en-MeloTTS-jane_eyre_31_f000113</b></p>
+            <p>Original</p>
+            <audio controls>
+              <source src="MLAAD-en-MeloTTS-jane_eyre_31_f000113.wav" type="audio/wav">
+            </audio>
+            <p>AudioSeal WM</p>
+            <audio controls>
+              <source src="MLAAD-en-MeloTTS-jane_eyre_31_f000113_audioseal_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-A WM</p>
+            <audio controls>
+              <source src="MLAAD-en-MeloTTS-jane_eyre_31_f000113_fakemark_a_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-T WM</p>
+            <audio controls>
+              <source src="MLAAD-en-MeloTTS-jane_eyre_31_f000113_fakemark_t_wm.wav" type="audio/wav">
+            </audio>
+            <p>Timbre WM</p>
+            <audio controls>
+              <source src="MLAAD-en-MeloTTS-jane_eyre_31_f000113_timbre_wm.wav" type="audio/wav">
+            </audio>
+          </li>
+
+          <li>
+            <p><b>MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030</b></p>
+            <p>Original</p>
+            <audio controls>
+              <source src="MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030.wav" type="audio/wav">
+            </audio>
+            <p>AudioSeal WM</p>
+            <audio controls>
+              <source src="MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_audioseal_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-A WM</p>
+            <audio controls>
+              <source src="MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_fakemark_a_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-T WM</p>
+            <audio controls>
+              <source src="MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_fakemark_t_wm.wav" type="audio/wav">
+            </audio>
+            <p>Timbre WM</p>
+            <audio controls>
+              <source src="MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_timbre_wm.wav" type="audio/wav">
             </audio>
           </li>
         </ul>
