--- a/index.html
+++ b/index.html
@@ -1,142 +1,141 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>FakeMark: Deepfake Speech Attribution With Watermarked Artifacts</title>
+    <title>Audio samples for "FakeMark: Deepfake Speech Attribution With Watermarked Artifacts</title>
   </head>
   <body>
     <article>
-      <header>
-        <h2>Audio samples for "FakeMark: Deepfake Speech Attribution With Watermarked Artifacts"</h2>
-      </header>
-
       <section>
-        <h3>Speech Samples</h3>
         <ul>
           <li>
-            <p><b>MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152</b></p>
+            <p><b>facebook-mms-tts-deu-caspar_hauser_29_f000152</b></p>
             <p>Original</p>
             <audio controls>
-              <source src="MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152.wav" type="audio/wav">
+              <source src="audio/MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152.wav" type="audio/wav">
             </audio>
             <p>AudioSeal WM</p>
             <audio controls>
-              <source src="MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_audioseal_wm.wav" type="audio/wav">
+              <source src="audio/MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_audioseal_wm.wav" type="audio/wav">
             </audio>
             <p>FakeMark-A WM</p>
             <audio controls>
-              <source src="MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_fakemark_a_wm.wav" type="audio/wav">
+              <source src="audio/MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_fakemark_a_wm.wav" type="audio/wav">
             </audio>
             <p>FakeMark-T WM</p>
             <audio controls>
-              <source src="MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_fakemark_t_wm.wav" type="audio/wav">
+              <source src="audio/MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_fakemark_t_wm.wav" type="audio/wav">
             </audio>
             <p>Timbre WM</p>
             <audio controls>
-              <source src="MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_timbre_wm.wav" type="audio/wav">
+              <source src="audio/MLAAD-de-facebook-mms-tts-deu-caspar_hauser_29_f000152_timbre_wm.wav" type="audio/wav">
             </audio>
           </li>
 
           <li>
-            <p><b>MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024</b></p>
+            <p><b>tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024</b></p>
             <p>Original</p>
             <audio controls>
-              <source src="MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024.wav" type="audio/wav">
+              <source src="audio/MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024.wav" type="audio/wav">
             </audio>
             <p>AudioSeal WM</p>
             <audio controls>
-              <source src="MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_audioseal_wm.wav" type="audio/wav">
+              <source src="audio/MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_audioseal_wm.wav" type="audio/wav">
             </audio>
             <p>FakeMark-A WM</p>
             <audio controls>
-              <source src="MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_fakemark_a_wm.wav" type="audio/wav">
+              <source src="audio/MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_fakemark_a_wm.wav" type="audio/wav">
             </audio>
             <p>FakeMark-T WM</p>
             <audio controls>
-              <source src="MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_fakemark_t_wm.wav" type="audio/wav">
+              <source src="audio/MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_fakemark_t_wm.wav" type="audio/wav">
             </audio>
             <p>Timbre WM</p>
             <audio controls>
-              <source src="MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_timbre_wm.wav" type="audio/wav">
-            </audio>
-          </li>
-
-          <li>
-            <p><b>MLAAD-en-Mars5-wives_and_daughters_25_f000065</b></p>
-            <p>Original</p>
-            <audio controls>
-              <source src="MLAAD-en-Mars5-wives_and_daughters_25_f000065.wav" type="audio/wav">
-            </audio>
-            <p>AudioSeal WM</p>
-            <audio controls>
-              <source src="MLAAD-en-Mars5-wives_and_daughters_25_f000065_audioseal_wm.wav" type="audio/wav">
-            </audio>
-            <p>FakeMark-A WM</p>
-            <audio controls>
-              <source src="MLAAD-en-Mars5-wives_and_daughters_25_f000065_fakemark_a_wm.wav" type="audio/wav">
-            </audio>
-            <p>FakeMark-T WM</p>
-            <audio controls>
-              <source src="MLAAD-en-Mars5-wives_and_daughters_25_f000065_fakemark_t_wm.wav" type="audio/wav">
-            </audio>
-            <p>Timbre WM</p>
-            <audio controls>
-              <source src="MLAAD-en-Mars5-wives_and_daughters_25_f000065_timbre_wm.wav" type="audio/wav">
-            </audio>
-          </li>
-
-          <li>
-            <p><b>MLAAD-en-MeloTTS-jane_eyre_31_f000113</b></p>
-            <p>Original</p>
-            <audio controls>
-              <source src="MLAAD-en-MeloTTS-jane_eyre_31_f000113.wav" type="audio/wav">
-            </audio>
-            <p>AudioSeal WM</p>
-            <audio controls>
-              <source src="MLAAD-en-MeloTTS-jane_eyre_31_f000113_audioseal_wm.wav" type="audio/wav">
-            </audio>
-            <p>FakeMark-A WM</p>
-            <audio controls>
-              <source src="MLAAD-en-MeloTTS-jane_eyre_31_f000113_fakemark_a_wm.wav" type="audio/wav">
-            </audio>
-            <p>FakeMark-T WM</p>
-            <audio controls>
-              <source src="MLAAD-en-MeloTTS-jane_eyre_31_f000113_fakemark_t_wm.wav" type="audio/wav">
-            </audio>
-            <p>Timbre WM</p>
-            <audio controls>
-              <source src="MLAAD-en-MeloTTS-jane_eyre_31_f000113_timbre_wm.wav" type="audio/wav">
-            </audio>
-          </li>
-
-          <li>
-            <p><b>MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030</b></p>
-            <p>Original</p>
-            <audio controls>
-              <source src="MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030.wav" type="audio/wav">
-            </audio>
-            <p>AudioSeal WM</p>
-            <audio controls>
-              <source src="MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_audioseal_wm.wav" type="audio/wav">
-            </audio>
-            <p>FakeMark-A WM</p>
-            <audio controls>
-              <source src="MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_fakemark_a_wm.wav" type="audio/wav">
-            </audio>
-            <p>FakeMark-T WM</p>
-            <audio controls>
-              <source src="MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_fakemark_t_wm.wav" type="audio/wav">
-            </audio>
-            <p>Timbre WM</p>
-            <audio controls>
-              <source src="MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_timbre_wm.wav" type="audio/wav">
+              <source src="audio/MLAAD-de-tts_models-de-css10-vits-neon-ferien_vom_ich_001_f000024_timbre_wm.wav" type="audio/wav">
             </audio>
           </li>
         </ul>
       </section>
 
-      <footer>
-        <p>Created for anonymous ICLR submission.</p>
-      </footer>
+      <section>
+        <ul>
+          <li>
+            <p><b>Mars5-wives_and_daughters_25_f000065</b></p>
+            <p>Original</p>
+            <audio controls>
+              <source src="audio/MLAAD-en-Mars5-wives_and_daughters_25_f000065.wav" type="audio/wav">
+            </audio>
+            <p>AudioSeal WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-en-Mars5-wives_and_daughters_25_f000065_audioseal_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-A WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-en-Mars5-wives_and_daughters_25_f000065_fakemark_a_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-T WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-en-Mars5-wives_and_daughters_25_f000065_fakemark_t_wm.wav" type="audio/wav">
+            </audio>
+            <p>Timbre WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-en-Mars5-wives_and_daughters_25_f000065_timbre_wm.wav" type="audio/wav">
+            </audio>
+          </li>
+
+          <li>
+            <p><b>MeloTTS-jane_eyre_31_f000113</b></p>
+            <p>Original</p>
+            <audio controls>
+              <source src="audio/MLAAD-en-MeloTTS-jane_eyre_31_f000113.wav" type="audio/wav">
+            </audio>
+            <p>AudioSeal WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-en-MeloTTS-jane_eyre_31_f000113_audioseal_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-A WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-en-MeloTTS-jane_eyre_31_f000113_fakemark_a_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-T WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-en-MeloTTS-jane_eyre_31_f000113_fakemark_t_wm.wav" type="audio/wav">
+            </audio>
+            <p>Timbre WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-en-MeloTTS-jane_eyre_31_f000113_timbre_wm.wav" type="audio/wav">
+            </audio>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <ul>
+          <li>
+            <p><b>tts_models-lt-cv-vits-midnight_passenger_13_f000030</b></p>
+            <p>Original</p>
+            <audio controls>
+              <source src="audio/MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030.wav" type="audio/wav">
+            </audio>
+            <p>AudioSeal WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_audioseal_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-A WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_fakemark_a_wm.wav" type="audio/wav">
+            </audio>
+            <p>FakeMark-T WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_fakemark_t_wm.wav" type="audio/wav">
+            </audio>
+            <p>Timbre WM</p>
+            <audio controls>
+              <source src="audio/MLAAD-lt-tts_models-lt-cv-vits-midnight_passenger_13_f000030_timbre_wm.wav" type="audio/wav">
+            </audio>
+          </li>
+        </ul>
+      </section>
     </article>
   </body>
 </html>
