--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Audio samples for "FakeMark: Deepfake Speech Attribution With Watermarked Artifacts</title>
+    <title>FakeMark: Deepfake Speech Attribution With Watermarked Artifacts</title>
   </head>
   <body>
     <article>
+      <header>
+        <h2>Audio samples for "FakeMark: Deepfake Speech Attribution With Watermarked Artifacts"</h2>
+      </header>
       <section>
         <ul>
           <li>
